--- a/pages/sweatshirt.html
+++ b/pages/sweatshirt.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <div class="info">
+        <p>1 free product with purchase of 3 products</p>
+        <i class="material-icons closetopinfo">close</i>
+    </div>
+
     <div class="menu">
         <div class="innermenu">
             <i class="material-icons close">close</i>
@@ -45,16 +50,18 @@
         </div>
 
         <div class="right">
-            <div class="piece">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square close"></div>
-            </div>
+            <p style="color: gray;">Product: 100</p>
+            <hr>
 
+            <div class="piece">
+                <div class="square small">Small</div>
+                <div class="square large">Large</div>
+            </div>
+            <hr>
             <span class="filtericon">
                 <i class="material-icons">tune</i>Filter
             </span>
+
         </div>
     </div>
     <!-- Filter -->
@@ -62,6 +69,7 @@
         <div class="darkness"></div>
 
         <div class="filtercontent">
+            <i class="material-icons closefilter">close</i>
 
         </div>
 
@@ -73,9 +81,131 @@
                 <img src="../asset/banner2.jpg" alt="">
             </div>
             <div class="addcart">+</div>
-            <div class="size">S L XL</div>
-        </div>
 
+            <div class="productsize">
+                <form action="">
+                    <label>
+                        <input type="radio" name="size" value="S">
+                        S
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="L">
+                        L
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="XL">
+                        XL
+                        <span></span>
+                    </label>
+                </form>
+            </div>
+        </div>
+        <div class="product">
+            <div class="imgbox">
+                <img src="../asset/banner2.jpg" alt="">
+            </div>
+            <div class="addcart">+</div>
+
+            <div class="productsize">
+                <form action="">
+                    <label>
+                        <input type="radio" name="size" value="S">
+                        S
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="L">
+                        L
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="XL">
+                        XL
+                        <span></span>
+                    </label>
+                </form>
+            </div>
+        </div>
+        <div class="product">
+            <div class="imgbox">
+                <img src="../asset/banner2.jpg" alt="">
+            </div>
+            <div class="addcart">+</div>
+
+            <div class="productsize">
+                <form action="">
+                    <label>
+                        <input type="radio" name="size" value="S">
+                        S
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="L">
+                        L
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="XL">
+                        XL
+                        <span></span>
+                    </label>
+                </form>
+            </div>
+        </div>
+        <div class="product">
+            <div class="imgbox">
+                <img src="../asset/banner2.jpg" alt="">
+            </div>
+            <div class="addcart">+</div>
+
+            <div class="productsize">
+                <form action="">
+                    <label>
+                        <input type="radio" name="size" value="S">
+                        S
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="L">
+                        L
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="XL">
+                        XL
+                        <span></span>
+                    </label>
+                </form>
+            </div>
+        </div>
+        <div class="product">
+            <div class="imgbox">
+                <img src="../asset/banner2.jpg" alt="">
+            </div>
+            <div class="addcart">+</div>
+
+            <div class="productsize">
+                <form action="">
+                    <label>
+                        <input type="radio" name="size" value="S">
+                        S
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="L">
+                        L
+                        <span></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="size" value="XL">
+                        XL
+                        <span></span>
+                    </label>
+                </form>
+            </div>
+        </div>
     </div>
 
     <script src="../js/app.js"></script>
