--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
+    <div class="menu">
+        <div class="innermenu">
+            <i class="material-icons close">close</i>
+            <aside>
+                <a href="">Sweatshirt</a>
+                <a href="">T-shirt</a>
+                <a href="">Pants</a>
+                <a href="">Jacket</a>
+            </aside>
+        </div>
+        <div class="closemenu"></div>
+    </div>
+    <nav>
+        <div class="menuicon">
+            <i class="material-icons">menu</i>
+        </div>
 
+
+        <div class="logo">
+            <img src="/asset/logo.png" alt="">
+        </div>
+        <div class="login">
+            <a href="" class="logintext">Login</a>
+            <a href="">
+                <i class="material-icons">local_mall</i>
+            </a>
+
+        </div>
+    </nav>
     <div class="menu">
         <div class="innermenu">
             <i class="material-icons close">close</i>
